<resources>
    <string name="app_name">ServiApp</string>
    <string name="title_activity_nav_drawer_activity">nav_drawer_activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="view_profile">Ver perfil</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="title_activity_signup">Registrarse</string>

    <!-- Strings related to login -->
    <string name="prompt_first_name">Nombre</string>
    <string name="prompt_last_name">Apellido</string>
    <string name="prompt_birth_date">Fecha de nacimiento</string>
    <string name="prompt_gender_male">Hombre</string>
    <string name="prompt_gender_female">Mujer</string>
    <string name="prompt_mobile_phone">Teléfono móvil</string>
    <string name="prompt_work_phone">Teléfono de trabajo (opcional)</string>
    <string name="prompt_email">Email (opcional)</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_mobile_phone">This mobile phone is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_email_domain">/@serviapp.cl</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">951970431568898</string>
</resources>
